# HarnessKit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  build.sh  install.ps1  install.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: codeql.yml  pr-checks.yml  release.yml
crates/hk-cli/: Cargo.toml
crates/hk-cli/src/: main.rs
crates/hk-core/: Cargo.toml
crates/hk-core/src/: config.rs  deployer.rs  lib.rs  manager.rs  marketplace.rs  models.rs  sanitize.rs  scanner.rs  service.rs  store.rs
crates/hk-core/src/adapter/: antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  hook_events.rs  mod.rs  preset.rs  windsurf.rs
crates/hk-core/src/auditor/: mod.rs  rules.rs
crates/hk-core/tests/: toggle_integration.rs
crates/hk-desktop/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
crates/hk-desktop/capabilities/: default.json
crates/hk-desktop/src/: commands.rs  icon.rs  main.rs
crates/hk-desktop/src/commands/: agents.rs  audit.rs  extensions.rs  helpers.rs  hub.rs  install.rs  marketplace.rs  mod.rs  projects.rs  settings.rs
crates/hk-web/: Cargo.toml
crates/hk-web/src/: lib.rs  router.rs
crates/hk-web/src/handlers/: agents.rs  audit.rs  extensions.rs  hub.rs  install.rs  marketplace.rs  mod.rs  projects.rs  settings.rs
crates/hk-web/tests/: api_test.rs
docs/: future-roadmap.md
docs/superpowers/plans/: 2026-03-26-tags-marketplace-deploy.md  2026-03-30-agent-drag-reorder.md  2026-03-31-cli-extension-type.md  2026-05-09-asset-logical-grouping-bugfix.md  2026-05-09-local-hub-extension-scope-display.md  2026-05-11-global-asset-tag.md  2026-05-12-desktop-release-hardening.md
docs/superpowers/specs/: 2026-03-26-harnesskit-design.md  2026-03-29-agents-page-design.md  2026-03-30-cli-extension-type-design.md  2026-05-08-install-surface-unification-design.md  2026-05-09-asset-logical-grouping-bugfix-design.md  2026-05-09-local-hub-extension-scope-display-design.md  2026-05-09-overview-and-global-agent-toggle-design.md  2026-05-11-global-asset-tag-design.md  2026-05-12-desktop-release-hardening-design.md  2026-05-13-windows-extension-scan-design.md
scripts/: bump-version.sh
src/: App.tsx  index.css
src/components/agents/: agent-detail.tsx  agent-extensions-panel.tsx  agent-list.tsx  agent-scope-tree.tsx  config-file-entry.tsx  config-section.tsx  extensions-summary-card.tsx  section-anchor-rail.tsx
src/components/extensions/: delete-dialog.tsx  detail-cli-sections.tsx  detail-header.tsx  detail-paths.tsx  extension-detail.tsx  extension-filters.tsx  extension-table.tsx  file-tree-node.tsx  install-dialog.tsx  new-skills-dialog.tsx  permission-detail.tsx  skill-file-section.tsx
src/components/extensions/__tests__/: extension-install-flow.test.tsx  extension-table.test.tsx
src/components/layout/: app-shell.tsx  changelog-markdown.tsx  scope-switcher-menu.tsx  sidebar.tsx  update-card.tsx  web-update-card.tsx  web-update-dialog.tsx
src/components/local-hub/: hub-detail.tsx  hub-filters.tsx  hub-table.tsx  sync-dialog.tsx
src/components/local-hub/__tests__/: hub-detail.test.tsx  hub-table.test.tsx
src/components/onboarding/: confetti.tsx  onboarding.tsx
src/components/shared/: agent-card.tsx  agent-install-icon-row.tsx  animated-ellipsis.tsx  error-boundary.tsx  global-badge.tsx  hint.tsx  kind-badge.tsx  permission-tags.tsx  project-install-panel.tsx  scope-target-field.tsx  stat-card.tsx  toast-container.tsx  toast.tsx  trust-badge.tsx
src/components/shared/__tests__/: agent-install-icon-row.test.tsx  error-boundary.test.tsx  project-install-panel.test.tsx
src/components/shared/agent-mascot/: agent-mascot.tsx  antigravity-mascot.tsx  claude-mascot.tsx  codex-mascot.tsx  copilot-mascot.tsx  cursor-mascot.tsx  fallback-mascot.tsx  gemini-mascot.tsx  mascot.css  windsurf-mascot.tsx
src/hooks/: use-focus-trap.ts  use-scroll-passthrough.ts
src/lib/: agent-base-config.json  agent-base-config.ts  agent-capabilities.ts  agent-icons.ts  dialog.ts  error-types.ts  errors.ts  install-surface.ts  invoke.ts  transport.ts  types.ts  web-select.ts
src/lib/__tests__/: error-types.test.ts  errors.test.ts  install-surface.test.ts  scope-store.test.ts  types.test.ts
src/pages/: agents.tsx  audit-utils.ts  audit.tsx  extensions.tsx  local-hub.tsx  marketplace.tsx  overview.tsx  projects.tsx  settings.tsx
src/pages/__tests__/: audit-utils.test.ts  extensions-page.test.tsx  local-hub-page.test.tsx  overview.test.tsx
src/stores/: agent-config-store.ts  agent-store.ts  audit-store.ts  extension-helpers.ts  extension-store.ts  hub-store.ts  marketplace-store.ts  project-store.ts  scope-store.ts  ui-store.ts  update-store.ts  web-update-store.ts
src/stores/__tests__/: extension-helpers.test.ts  ui-store.test.ts  web-update-store.test.ts
