[workspace]
members = ["crates/hk-core", "crates/hk-cli", "crates/hk-desktop", "crates/hk-web"]
resolver = "2"

[workspace.package]
version = "1.1.1"
edition = "2024"
license = "Apache-2.0"

[profile.release]
strip = true
lto = "thin"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
