[package]
name = "hk-core"
version.workspace = true
edition.workspace = true

[features]
default = []
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
toml = "0.8"
dirs = "6"
glob = "0.3"

lru = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "default-tls"] }
tokio = { version = "1", features = ["rt"] }
notify = "7"
tempfile = "3"
semver = "1"
fs2 = "0.4"
