[package]
name = "hk-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
toml = "0.8"
dirs = "6"
glob = "0.3"

lru = "0.12"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt"] }
notify = "7"
tempfile = "3"
semver = "1"
fs2 = "0.4"

# When building for musl, compile OpenSSL from source instead of linking
# to system libssl (which doesn't exist in musl environments).
[target.'cfg(target_env = "musl")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
