[package]
name = "hk-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hk-core = { path = "../hk-core" }
tauri = { version = "2", features = ["macos-private-api"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs = "6"
tauri-plugin-dialog = "2"
