[package]
name = "hk-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hk-core = { path = "../hk-core" }
tauri = { version = "2", features = ["macos-private-api"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs = "6"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
uuid.workspace = true
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }
