[package]
name = "hk-web"
version.workspace = true
edition.workspace = true

[dependencies]
hk-core = { path = "../hk-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = { version = "8", features = ["mime-guess"] }
dirs = "6"
parking_lot = "0.12"
rand = "0.9"
tempfile = "3"
mime_guess = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
